# registry-k8s

./: Dockerfile  Makefile  README.md  load_test.py  pyproject.toml
docker-registry/: load_test_registry.py
docker-registry-minio/: access  configmap.yml  initContainer.yml  init_script.py  kustomization.yml  namespace.yml  patch.yml  values.yml
docker-registry-minio/configuration/: docker-bucket-policy.json  script.sh
dragon-fly/: values.yml
dragonfly/: dind.yaml  values.yaml
