[tool.poetry]
name = "docker-registry-loadtesting"
version = "0.1.0"
description = "Load testing for Docker Registry using Locust"
authors = ["@jb-lt"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
locust = "^2.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
